--- a/SimpleEventBus/pom.xml
+++ b/SimpleEventBus/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.send-to.gwt</groupId>
 	<artifactId>EventBus</artifactId>
-	<version>2.8.0.0</version>
+	<version>2.8.0.0-SNAPSHOT</version>
 	<name>Gwt Simple Client Event Bus</name>
 
 	<parent>
@@ -20,10 +21,10 @@
 	</licenses>
 
 	<scm>
-		<url>https://github.com/nleva/gwtshortcut</url>
-		<connection>scm:git:https://github.com/nleva/gwtshortcut.git</connection>
-		<developerConnection>scm:git:https://github.com/nleva/gwtshortcut.git</developerConnection>
-		<tag>EventBus-2.8.0.0</tag>
+		<url>https://github.com/nleva/GwtEventBus</url>
+		<connection>scm:git:https://github.com/nleva/GwtEventBus.git</connection>
+		<developerConnection>scm:git:https://github.com/nleva/GwtEventBus.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
