--- a/SimpleEventBus/pom.xml
+++ b/SimpleEventBus/pom.xml
@@ -21,9 +21,9 @@
 	</licenses>
 
 	<scm>
-		<url>https://github.com/nleva/gwtshortcut</url>
-		<connection>scm:git:https://github.com/nleva/gwtshortcut.git</connection>
-		<developerConnection>scm:git:https://github.com/nleva/gwtshortcut.git</developerConnection>
+		<url>https://github.com/nleva/GwtEventBus</url>
+		<connection>scm:git:https://github.com/nleva/GwtEventBus.git</connection>
+		<developerConnection>scm:git:https://github.com/nleva/GwtEventBus.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
