--- a/SimpleEventBus/pom.xml
+++ b/SimpleEventBus/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>gwt-dev</artifactId>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>ru.send-to.gwt.html</groupId>
+			<artifactId>HtmlGwt</artifactId>
+			<version>2.8.1.0</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
