--- a/SimpleEventBus/pom.xml
+++ b/SimpleEventBus/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.send-to.gwt</groupId>
 	<artifactId>EventBus</artifactId>
-	<version>2.8.1.4</version>
+	<version>2.8.1.5-SNAPSHOT</version>
 	<name>Gwt Simple Client Event Bus</name>
 
 	<parent>
@@ -23,7 +23,7 @@
 		<url>https://github.com/nleva/GwtEventBus</url>
 		<connection>scm:git:https://github.com/nleva/GwtEventBus.git</connection>
 		<developerConnection>scm:git:https://github.com/nleva/GwtEventBus.git</developerConnection>
-		<tag>EventBus-2.8.1.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
